# bad-drivers-infographic

./: BadDrivers.ipynb  README.md  pyproject.toml
data/: bad-drivers.csv
