[tool.poetry]
name = "bad-drivers-infographic"
version = "0.1.0"
description = ""
authors = ["johnymontana <lyonwj@gmail.com>"]
readme = "README.md"
packages = [{include = "bad_drivers_infographic"}]

[tool.poetry.dependencies]
python = "^3.8"
plotly = "^5.11.0"
pandas = "^1.5.1"
jupyter = "^1.0.0"
kaleido = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
